# worldexams

./: .gitignore  AGENTS.md  AGENT_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MASTER_PLAN.md  PLANNING.md  PR_DESCRIPTION.md  TASK.md  apply-template.ps1  astro.config.mjs  audit_log.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_final.txt  build_log_final_2.txt  build_log_final_3.txt  countries-config.ps1  masterplan.md  package-lock.json  package.json
.github/: copilot-instructions.md
api/: questions.json
docs/: BUSINESS_MODEL.md  E2E_PARTY_MODE_TESTS.md  PARTY_MODE.md  PARTY_MODE_WEB_ARCHITECTURE.md  PRODUCTION_READINESS_REPORT.md  QUESTION_GENERATION_PLAN.md  QUESTION_GENERATION_PROTOCOL_V2.md  ROADMAP_NATIVE_APPS.md  SCRIPTS_GUIDE.md
party-server-rust/: .gitignore  COMPILATION_FIX.md  Cargo.toml  README.md
party-server-rust/migrations/: 001_initial_schema.sql  20251211000001_initial_schema.sql  20251211000001_initial_schema_v2.sql
party-server-rust/src/: lib.rs  main.rs
party-server-rust/src/application/: create_party.rs  dto.rs  join_party.rs  mod.rs
party-server-rust/src/config/: settings.rs
party-server-rust/src/domain/entities/: mod.rs  party.rs  player.rs
party-server-rust/src/domain/repositories/: mod.rs  party_repository.rs  player_repository.rs  traits.rs
party-server-rust/src/domain/services/: mod.rs
party-server-rust/src/infrastructure/: mod.rs
party-server-rust/src/infrastructure/database/: mod.rs  party_repo_impl.rs  party_repository.rs  player_repository.rs
party-server-rust/src/infrastructure/http/: routes.rs
party-server-rust/src/infrastructure/websocket/: mod.rs  party_actor.rs
public/: robots.txt
saberparatodos/: .gitignore  AGENTS.md  CLOUDFLARE_FIX.md  CLOUDFLARE_SETUP.md  DEPLOYMENT_COMPLETE.md  README.md  SETUP_GUIDE.md  astro.config.mjs  configure-cloudflare-secrets.ps1  package-lock.json  (+8 more)
saberparatodos/tools/duplicate-handler/: Cargo.toml
saberparatodos/tools/duplicate-handler/src/: main.rs
saberparatodos/tools/question-generator/: Cargo.toml
saberparatodos/tools/question-generator/src/: content_discovery.rs  gemini.rs  main.rs  processing.rs
(+1026 files in other folders)
