[package]
name = "party-server"
version = "1.0.0"
edition = "2021"
authors = ["World Exams Team"]
license = "AGPL-3.0"
description = "Local party mode server for synchronized exams"

[lib]
name = "party_server"
path = "src/lib.rs"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-web-actors = "4.3"
actix-cors = "0.7"
actix-files = "0.6"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# WebSocket
actix = "0.13"
actix-ws = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
actix-rt = "2.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "party-server"
path = "src/main.rs"
