[package]
name = "duplicate-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
anyhow = "1.0"
gray_matter = "0.2"
regex = "1.5"
dotenv = "0.15"
