[package]
name = "question-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rayon = "1.7"
anyhow = "1.0"
rand = "0.8"
chrono = "0.4"
dotenv = "0.15"
regex = "1"
walkdir = "2"
